# JephySoftMediaPlayer

./: settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/jephysoftmediaplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: MediaDecode.cpp  MediaDecode.h  media_controller-lib.cpp
app/src/main/cpp/EvoInterface/: EvoHeader.h  EvoMediaSource.cpp  EvoMediaSource.h  EvoVideoConvert.cpp  EvoVideoConvert.h  VideoDecoder.cpp  VideoDecoder.h
app/src/main/java/com/jephysoftmediaplayer/: Main.java  MainActivity.java  PlayerTestActivity.java
app/src/main/java/com/jephysoftmediaplayer/datasource/: H264FileVideoDataSource.java  OnFrameCallback.java  VideoDataSource.java
app/src/main/java/com/jephysoftmediaplayer/decode/: DecodeConsumer.java  DecodeController.java  OnFrameCallBack.java  UVCSoftDecoder.java  VideoStamp.java
app/src/main/java/com/jephysoftmediaplayer/mock/: ByteBufferSendMocker.java  Data.java  MockUVCManager.java
app/src/main/java/com/jephysoftmediaplayer/player/: DecodeContrller.java  DecodeController.java  JephyPlayer.java
app/src/main/java/com/jephysoftmediaplayer/util/: CompressedFramePacketBuffer.java  FrameGroup.java  FrameGroupQueueRepository.java  YUVFrameBuffer.java
app/src/main/res/layout/: activity_main.xml  activity_mock_data.xml
app/src/test/java/com/jephysoftmediaplayer/: ExampleUnitTest.java
glrenderview/: .gitignore  build.gradle
glrenderview/src/androidTest/java/com/evomotion/glrenderview/: ExampleInstrumentedTest.java
glrenderview/src/main/: AndroidManifest.xml
glrenderview/src/main/cpp/: CMakeLists.txt  GLProgram.cpp  GLProgram.h  RenderView.cpp
glrenderview/src/main/cpp/Animation/: AnimateManager.cpp  AnimateManager.h  AnimationCallbackImpl.cpp  AnimationCallbackImpl.h  AnimationPropertyValuesHolder.cpp  AnimationPropertyValuesHolder.h  AnimationThread.cpp  AnimationThread.h  AnimePropertyValuesHolder.cpp  AnimePropertyValuesHolder.h  FuncWrapper.h  GlAnimator.cpp  GlAnimator.h  TypeEvaluator.cpp  TypeEvaluator.h  ValueSetter.cpp  ValueSetter.h
glrenderview/src/main/cpp/RenderControl/: BaseRender.cpp  BaseRender.h  BaseRenderController.cpp  BaseRenderController.h  BaseTextureController.cpp  BaseTextureController.h  PicTexController.cpp  PicTexController.h  RectangleRenderer.cpp  RectangleRenderer.h  ShaderCommon.h  SphereRenderController.cpp  SphereRenderController.h  TextureCommon.h  VertexData.c  VertexData.h  VideoTextureController.cpp  VideoTextureController.h  VrRenderController.cpp  VrRenderController.h
glrenderview/src/main/cpp/Utils/: EnumsStatus.h  ImageUtil.cpp  ImageUtil.h  LogUtils.h
glrenderview/src/main/cpp/VideoUtil/: VideoUtil.cpp  VideoUtil.h
glrenderview/src/main/cpp/encryption/: Encryption.cpp
glrenderview/src/main/cpp/exif/: exifUtils.c  exifUtils.h
glrenderview/src/main/java/com/evomotion/glrenderview/: AbstractRenderLayout.java  BinocularVrView.java  GlPicRenderLayout.java  GlRenderHandler.java  GlSurfaceViewEventSignal.java  GlVideoRenderLayout.java  InteractController.java  RenderStatus.java  RenderType.java  RenderView.java  VideoFormat.java  WaterMarkerProducer.java
glrenderview/src/main/java/com/evomotion/glrenderview/interfaces/: IDisplayCallback.java  IGlRenderView.java  IOnTapListener.java  IRenderCallback.java  IRenderErrorCallback.java  IRenderInteractEvent.java  IShotCallback.java
glrenderview/src/main/res/values/: strings.xml
glrenderview/src/test/java/com/evomotion/glrenderview/: ExampleUnitTest.java
